<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_add_variant_size_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/etColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/admin_add_variant_color_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/etStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/admin_add_variant_stock_hint"
        android:inputType="number" />

</LinearLayout>